--- a/public/index.html
+++ b/public/index.html
@@ -89,8 +89,12 @@
                         </p>
                     </div>
                 </div>
+            </div>   
             </div>
-                   
+            <div class="right_side_content">
+                <div class="asset_right_side">
+                    <img src="./asset/righjt.jpg">
+                </div>
             </div>
         </div>
     </div>
