--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@ rel="stylesheet"
                 <div class="asset_right_side">
                     <img src="./asset/righjt.jpg" alt="Barbie Collection">
                     <div class="over_asset">
-                        <a href="#"><h2>Movies</h2></a>
+                        <a href="#movie_lover"><h2>Movies</h2></a>
                     </div>
                 </div>
             </div>
