--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ rel="stylesheet"
                 <!-- BARBIE CARD -->
                 <div class="asset_content">
                     <div class="asset">
-                        <img src="./asset/barbie.jpg">
+                        <img src="/public/asset/barbey.jpg">
                         <div class="content_for_asset">
                             <h4>Barbie</h4>
                             <p>
@@ -81,7 +81,7 @@ rel="stylesheet"
                 <!-- KEN CARD -->
                 <div class="asset_content">
                     <div class="asset">
-                        <img src="./asset/ken.jpg">
+                        <img src="/public/asset/ken.jpg">
                         <div class="content_for_asset">
                             <h4>Ken</h4>
                             <p>
@@ -95,7 +95,7 @@ rel="stylesheet"
                 <!-- RAQUELLE CARD -->
                 <div class="asset_content">
                     <div class="asset">
-                        <img src="./asset/raquelle.jpg">
+                        <img src="/public/asset/raquelle.jpg">
                         <div class="content_for_asset">
                             <h4>Raquelle</h4>
                             <p>
@@ -111,7 +111,7 @@ rel="stylesheet"
             <!-- RIGHT SIDE IMAGE + BUBBLE -->
             <div class="right_side_content">
                 <div class="asset_right_side">
-                    <img src="./asset/righjt.jpg" alt="Barbie Collection">
+                    <img src="/public/asset/righjt.jpg" alt="Barbie Collection">
                     <div class="over_asset">
                         <a href="#movie_lover"><h2>Movies</h2></a>
                     </div>
@@ -142,75 +142,75 @@ rel="stylesheet"
         <div class="movie_item_container">
 
     <div class="asset_cards">
-        <img src="./asset/raquelle.jpg" alt="">
+        <img src="/public/asset/raquelle.jpg" alt="">
         <p>Barbie: Star Light Adventure (2016)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="./asset/raquelle.jpg" alt="">
+        <img src="/public/asset/raquelle.jpg" alt="">
         <p> Barbie: Spy Squad (2016)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="./asset/raquelle.jpg" alt="">
+        <img src="/public/asset/raquelle.jpg" alt="">
         <p> Barbie: Epic Road Trip (2022)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="./asset/raquelle.jpg" alt="">
+        <img src="/public/asset/raquelle.jpg" alt="">
         <p>Barbie: Fairytopia (2005)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="./asset/raquelle.jpg" alt="">
+        <img src="/public/asset/raquelle.jpg" alt="">
         <p> Barbie Mariposa and Her Butterfly Fairy Friends (2008)</p>
     </div>
     <div class="asset_cards">
-        <img src="./asset/raquelle.jpg" alt="">
+        <img src="/public/asset/raquelle.jpg" alt="">
         <p> Barbie: The Pearl Princess (2014)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="./asset/raquelle.jpg" alt="">
+        <img src="/public/asset/raquelle.jpg" alt="">
         <p>Barbie as The Princess and the Pauper (2004)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="./asset/raquelle.jpg" alt="">
+        <img src="/public/asset/raquelle.jpg" alt="">
         <p> Barbie in the 12 Dancing Princesses (2006)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="./asset/raquelle.jpg" alt="">
+        <img src="/public/asset/raquelle.jpg" alt="">
         <p>Barbie and the Diamond Castle (2008)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="./asset/raquelle.jpg" alt="">
+        <img src="/public/asset/raquelle.jpg" alt="">
         <p>Barbie Diaries (2006)</p>
     </div>
     <div class="asset_cards">
-        <img src="./asset/raquelle.jpg" alt="">
+        <img src="/public/asset/raquelle.jpg" alt="">
         <p>Barbie: A Fashion Fairytale (2010)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="./asset/raquelle.jpg" alt="">
+        <img src="/public/asset/raquelle.jpg" alt="">
         <p> Barbie: Princess Charm School (2011)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="./asset/raquelle.jpg" alt="">
+        <img src="/public/asset/raquelle.jpg" alt="">
         <p>Barbie (2023)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="./asset/raquelle.jpg" alt="">
+        <img src="/public/asset/raquelle.jpg" alt="">
         <p> Barbie & Teresa: Recipe for Friendship (2025)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="./asset/raquelle.jpg" alt="">
+        <img src="/public/asset/raquelle.jpg" alt="">
         <p> Barbie Princess Adventures (2020)</p>
     </div>
 
