--- a/movies.html
+++ b/movies.html
@@ -33,70 +33,70 @@ rel="stylesheet"
     </div>
 
     <div class="asset_cards">
-        <img src="/public/asset/raquelle.jpg" alt="">
+        <img src="./public/asset/raquelle.jpg" alt="">
         <p> Barbie: Spy Squad (2016)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="/public/asset/raquelle.jpg" alt="">
+        <img src="./public/asset/raquelle.jpg" alt="">
         <p> Barbie: Epic Road Trip (2022)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="/public/asset/raquelle.jpg" alt="">
+        <img src="./public/asset/raquelle.jpg" alt="">
         <p>Barbie: Fairytopia (2005)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="/public/asset/raquelle.jpg" alt="">
+        <img src="./public/asset/raquelle.jpg" alt="">
         <p> Barbie Mariposa and Her Butterfly Fairy Friends (2008)</p>
     </div>
     <div class="asset_cards">
-        <img src="/public/asset/raquelle.jpg" alt="">
+        <img src="./public/asset/raquelle.jpg" alt="">
         <p> Barbie: The Pearl Princess (2014)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="/public/asset/raquelle.jpg" alt="">
+        <img src="./public/asset/raquelle.jpg" alt="">
         <p>Barbie as The Princess and the Pauper (2004)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="/public/asset/raquelle.jpg" alt="">
+        <img src="./public/asset/raquelle.jpg" alt="">
         <p> Barbie in the 12 Dancing Princesses (2006)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="/public/asset/raquelle.jpg" alt="">
+        <img src="./public/asset/raquelle.jpg" alt="">
         <p>Barbie and the Diamond Castle (2008)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="/public/asset/raquelle.jpg" alt="">
+        <img src="./public/asset/raquelle.jpg" alt="">
         <p>Barbie Diaries (2006)</p>
     </div>
     <div class="asset_cards">
-        <img src="/public/asset/raquelle.jpg" alt="">
+        <img src="./public/asset/raquelle.jpg" alt="">
         <p>Barbie: A Fashion Fairytale (2010)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="/public/asset/raquelle.jpg" alt="">
+        <img src="./public/asset/raquelle.jpg" alt="">
         <p> Barbie: Princess Charm School (2011)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="/public/asset/raquelle.jpg" alt="">
+        <img src="./public/asset/raquelle.jpg" alt="">
         <p>Barbie (2023)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="/public/asset/raquelle.jpg" alt="">
+        <img src="./public/asset/raquelle.jpg" alt="">
         <p> Barbie & Teresa: Recipe for Friendship (2025)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="/public/asset/raquelle.jpg" alt="">
+        <img src="./public/asset/raquelle.jpg" alt="">
         <p> Barbie Princess Adventures (2020)</p>
     </div>
 
