--- a/movies.html
+++ b/movies.html
@@ -7,10 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="/WDProjLiJacobeReyes/css/style.css">
         <link rel="stylesheet" href="/WDProjLiJacobeReyes/css/responsive.css">
-        <link
-rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
-/>
+<body>
 <!-----------MOVIES---------------------------->
 <section id="movie_lover">
     <div class="container">
@@ -105,5 +102,7 @@ rel="stylesheet"
     </div>
 
 </section>
-
+<script src="/WDProjLiJacobeReyes/js/script.js"></script>
+</body>    
+</html>
 <!----------MOVIES----------------------------->
