--- a/index.html
+++ b/index.html
@@ -126,43 +126,40 @@ rel="stylesheet"
 
 
 <!----------showowow---------------------------->
-
 <section id="show_lover">
     <div class="container">
         <h3 class="normal_heading-1">Barbie Series</h3>
         <h2 class="main_heading">Adventures in Friendship</h2>
-        <div class="movie_lover_container">
+
         <div class="movie_item_container">
 
-    <div class="asset_cards">
-        <img src="./asset/ken.jpg" alt="">
-        <p>Barbie Life in the Dreamhouse (2012)</p>
-    </div>
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg" alt="">
+                <p>Barbie Life in the Dreamhouse (2012)</p>
+            </div>
 
-    <div class="asset_cards">
-        <img src="./asset/ken.jpg" alt="">
-        <p>Dreamtopia (2016)</p>
-    </div>
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg" alt="">
+                <p>Dreamtopia (2016)</p>
+            </div>
 
-    <div class="asset_cards">
-        <img src="./asset/ken.jpg" alt="">
-        <p>Barbie Dreamhouse Adventures (2018)</p>
-    </div>
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg" alt="">
+                <p>Barbie Dreamhouse Adventures (2018)</p>
+            </div>
 
-    <div class="asset_cards">
-        <img src="./asset/ken.jpg" alt="">
-        <p>It Takes Two (2022)</p>
-    </div>
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg" alt="">
+                <p>It Takes Two (2022)</p>
+            </div>
 
-    <div class="asset_cards">
-        <img src="./asset/ken.jpg" alt="">
-        <p>Barbie and Stacie to the Rescue (2024)</p>
-    </div>
-    
-</div>
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg" alt="">
+                <p>Barbie and Stacie to the Rescue (2024)</p>
+            </div>
+
         </div>
     </div>
-
 </section>
 
 <!----------SHWOOSOSOSOSO----------------------------->
@@ -170,59 +167,71 @@ rel="stylesheet"
 
 
 <!-- FRENS SECTION -->
-<section id="frens" class="slider-section">
-  <h2 class="section-title">Meet Barbie & Friends 💗</h2>
-  <div class="slider" id="frensSlider">
+<section id="frens">
+    <div class="container">
+        <h3 class="normal_heading-1">Barbie & Friends</h3>
+        <h2 class="main_heading">Meet the Squad</h2>
 
-    <div class="slide-card frens-card">
-      <img src="./asset/ken.jpg" alt="Barbie">
-      <h3>Barbie</h3>
-      <p>Confident, iconic, and always ready to sparkle.</p>
+        <div class="show_item_container">
+
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg">
+                <p>Barbie — Confident & iconic</p>
+            </div>
+
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg">
+                <p>Ken — Supportive & stylish</p>
+            </div>
+
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg">
+                <p>Raquelle — Competitive & fierce</p>
+            </div>
+
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg">
+                <p>Skipper — Tech-savvy & creative</p>
+            </div>
+
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg">
+                <p>Teresa — Loyal & imaginative</p>
+            </div>
+
+        </div>
     </div>
-
-    <div class="slide-card frens-card">
-      <img src="./asset/ken.jpg" alt="Ken">
-      <h3>Ken</h3>
-      <p>Supportive, stylish, and Barbie’s number one.</p>
-    </div>
-
-    <div class="slide-card frens-card">
-      <img src="./asset/ken.jpg" alt="Raquelle">
-      <h3>Raquelle</h3>
-      <p>Competitive, fierce, and fab in every outfit.</p>
-    </div>
-
-    <div class="slide-card frens-card">
-      <img src="./asset/ken.jpg" alt="Skipper">
-      <h3>Skipper</h3>
-      <p>Tech-savvy and creative with a cool vibe.</p>
-    </div>
-
-    <div class="slide-card frens-card">
-      <img src="./asset/ken.jpg" alt="Teresa">
-      <h3>Teresa</h3>
-      <p>Kind-hearted, loyal, and full of imagination.</p>
-    </div>
-
-  </div>
-  <button class="slide-btn left" onclick="slideFrens(-1)">&#10094;</button>
-  <button class="slide-btn right" onclick="slideFrens(1)">&#10095;</button>
 </section>
+<!------------------ FRENS----------------------->
 
 <!-- CLOTHES SLIDER -->
-<section id="clothes" class="slider-section">
-  <h2 class="section-title">Barbie Clothes</h2>
-  <div class="slider" id="clothesSlider">
-    <div class="slide-card img-card"><img src="./asset/raquelle.jpg" alt="Raquelle fit"></div>
-    <div class="slide-card img-card"><img src="./asset/raquelle.jpg" alt="Raquelle fit"></div>
-    <div class="slide-card img-card"><img src="./asset/raquelle.jpg" alt="Raquelle fit"></div>
-  </div>
-  <button class="slide-btn left" onclick="slideClothes(-1)">&#10094;
-  </button>
-  <button class="slide-btn right" onclick="slideClothes(1)">&#10095;</button>
+<section id="clothes">
+    <div class="container">
+        <h3 class="normal_heading-1">Barbie Closet</h3>
+        <h2 class="main_heading">Iconic Outfits</h2>
+
+        <div class="movie_item_container">
+
+            <div class="asset_cards">
+                <img src="./public/asset/raquelle.jpg" alt="">
+                <p>Pink Chic Dress</p>
+            </div>
+
+            <div class="asset_cards">
+                <img src="./public/asset/raquelle.jpg" alt="">
+                <p>Runway Glam Fit</p>
+            </div>
+
+            <div class="asset_cards">
+                <img src="./public/asset/raquelle.jpg" alt="">
+                <p>Classic Raquelle Look</p>
+            </div>
+
+        </div>
+    </div>
 </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+
     <script src="/WDProjLiJacobeReyes/js/script.js"></script>
 </body>    
 </html>
