--- a/shows.html
+++ b/shows.html
@@ -22,27 +22,27 @@ rel="stylesheet"
         <div class="movie_item_container">
 
     <div class="asset_cards">
-        <img src="./asset/ken.jpg" alt="">
+        <img src="./public/asset/ken.jpg" alt="">
         <p>Barbie Life in the Dreamhouse (2012)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="./asset/ken.jpg" alt="">
+        <img src="./public/asset/ken.jpg" alt="">
         <p>Dreamtopia (2016)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="./asset/ken.jpg" alt="">
+        <img src="./public/asset/ken.jpg" alt="">
         <p>Barbie Dreamhouse Adventures (2018)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="./asset/ken.jpg" alt="">
+        <img src="./public/asset/ken.jpg" alt="">
         <p>It Takes Two (2022)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="./asset/ken.jpg" alt="">
+        <img src="./public/asset/ken.jpg" alt="">
         <p>Barbie and Stacie to the Rescue (2024)</p>
     </div>
     
