--- a/characters.html
+++ b/characters.html
@@ -18,31 +18,31 @@ rel="stylesheet"
   <div class="slider" id="frensSlider">
 
     <div class="slide-card frens-card">
-      <img src="./asset/ken.jpg" alt="Barbie">
+      <img src="./public/asset/ken.jpg" alt="Barbie">
       <h3>Barbie</h3>
       <p>Confident, iconic, and always ready to sparkle.</p>
     </div>
 
     <div class="slide-card frens-card">
-      <img src="./asset/ken.jpg" alt="Ken">
+      <img src="./public/asset/ken.jpg" alt="Ken">
       <h3>Ken</h3>
       <p>Supportive, stylish, and Barbie’s number one.</p>
     </div>
 
     <div class="slide-card frens-card">
-      <img src="./asset/ken.jpg" alt="Raquelle">
+      <img src="./public/asset/ken.jpg" alt="Skipper">
       <h3>Raquelle</h3>
       <p>Competitive, fierce, and fab in every outfit.</p>
     </div>
 
     <div class="slide-card frens-card">
-      <img src="./asset/ken.jpg" alt="Skipper">
+      <img src="./public/asset/ken.jpg" alt="Stacie">
       <h3>Skipper</h3>
       <p>Tech-savvy and creative with a cool vibe.</p>
     </div>
 
     <div class="slide-card frens-card">
-      <img src="./asset/ken.jpg" alt="Teresa">
+      <img src="./public/asset/ken.jpg" alt="Teresa">
       <h3>Teresa</h3>
       <p>Kind-hearted, loyal, and full of imagination.</p>
     </div>
