--- a/closet.html
+++ b/closet.html
@@ -16,9 +16,9 @@ rel="stylesheet"
 <section id="clothes" class="slider-section">
   <h2 class="section-title">Barbie Clothes</h2>
   <div class="slider" id="clothesSlider">
-    <div class="slide-card img-card"><img src="./asset/raquelle.jpg" alt="Raquelle fit"></div>
-    <div class="slide-card img-card"><img src="./asset/raquelle.jpg" alt="Raquelle fit"></div>
-    <div class="slide-card img-card"><img src="./asset/raquelle.jpg" alt="Raquelle fit"></div>
+    <div class="slide-card img-card"><img src="./public/asset/raquelle.jpg" alt="Raquelle fit"></div>
+    <div class="slide-card img-card"><img src="./public/asset/raquelle.jpg" alt="Raquelle fit"></div>
+    <div class="slide-card img-card"><img src="./public/asset/raquelle.jpg" alt="Raquelle fit"></div>
   </div>
   <button class="slide-btn left" onclick="slideClothes(-1)">&#10094;
   </button>
