--- a/closet.html
+++ b/closet.html
@@ -11,21 +11,35 @@
 rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
 />
-
+</html>
 <!-- CLOTHES SLIDER -->
-<section id="clothes" class="slider-section">
-  <h2 class="section-title">Barbie Clothes</h2>
-  <div class="slider" id="clothesSlider">
-    <div class="slide-card img-card"><img src="./public/asset/raquelle.jpg" alt="Raquelle fit"></div>
-    <div class="slide-card img-card"><img src="./public/asset/raquelle.jpg" alt="Raquelle fit"></div>
-    <div class="slide-card img-card"><img src="./public/asset/raquelle.jpg" alt="Raquelle fit"></div>
-  </div>
-  <button class="slide-btn left" onclick="slideClothes(-1)">&#10094;
-  </button>
-  <button class="slide-btn right" onclick="slideClothes(1)">&#10095;</button>
+<section id="clothes">
+    <div class="container">
+        <h3 class="normal_heading-1">Barbie Closet</h3>
+        <h2 class="main_heading">Iconic Outfits</h2>
+
+        <div class="movie_item_container">
+
+            <div class="asset_cards">
+                <img src="./public/asset/raquelle.jpg" alt="">
+                <p>Pink Chic Dress</p>
+            </div>
+
+            <div class="asset_cards">
+                <img src="./public/asset/raquelle.jpg" alt="">
+                <p>Runway Glam Fit</p>
+            </div>
+
+            <div class="asset_cards">
+                <img src="./public/asset/raquelle.jpg" alt="">
+                <p>Classic Raquelle Look</p>
+            </div>
+
+        </div>
+    </div>
 </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+
     <script src="/WDProjLiJacobeReyes/js/script.js"></script>
 </body>    
 </html>
