to be or not to be

--- a/characters.html
+++ b/characters.html
@@ -11,43 +11,40 @@
 rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
 />
-
 <!-- FRENS SECTION -->
-<section id="frens" class="slider-section">
-  <h2 class="section-title">Meet Barbie & Friends 💗</h2>
-  <div class="slider" id="frensSlider">
+<section id="frens">
+    <div class="container">
+        <h3 class="normal_heading-1">Barbie & Friends</h3>
+        <h2 class="main_heading">Meet the Squad</h2>
 
-    <div class="slide-card frens-card">
-      <img src="./public/asset/ken.jpg" alt="Barbie">
-      <h3>Barbie</h3>
-      <p>Confident, iconic, and always ready to sparkle.</p>
+        <div class="show_item_container">
+
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg">
+                <p>Barbie — Confident & iconic</p>
+            </div>
+
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg">
+                <p>Ken — Supportive & stylish</p>
+            </div>
+
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg">
+                <p>Raquelle — Competitive & fierce</p>
+            </div>
+
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg">
+                <p>Skipper — Tech-savvy & creative</p>
+            </div>
+
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg">
+                <p>Teresa — Loyal & imaginative</p>
+            </div>
+
+        </div>
     </div>
-
-    <div class="slide-card frens-card">
-      <img src="./public/asset/ken.jpg" alt="Ken">
-      <h3>Ken</h3>
-      <p>Supportive, stylish, and Barbie’s number one.</p>
-    </div>
-
-    <div class="slide-card frens-card">
-      <img src="./public/asset/ken.jpg" alt="Skipper">
-      <h3>Raquelle</h3>
-      <p>Competitive, fierce, and fab in every outfit.</p>
-    </div>
-
-    <div class="slide-card frens-card">
-      <img src="./public/asset/ken.jpg" alt="Stacie">
-      <h3>Skipper</h3>
-      <p>Tech-savvy and creative with a cool vibe.</p>
-    </div>
-
-    <div class="slide-card frens-card">
-      <img src="./public/asset/ken.jpg" alt="Teresa">
-      <h3>Teresa</h3>
-      <p>Kind-hearted, loyal, and full of imagination.</p>
-    </div>
-
-  </div>
-  <button class="slide-btn left" onclick="slideFrens(-1)">&#10094;</button>
-  <button class="slide-btn right" onclick="slideFrens(1)">&#10095;</button>
 </section>
+<!------------------ FRENS----------------------->
