--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ rel="stylesheet"
     <nav>
         <li><a href="#">Home</a></li>
         <li><a href="./movies.html">Movies</a></li>
-        <li><a href="#show_lover">Shows</a></li>
-        <li><a href="#frens">Friends</a></li>
-        <li><a href="#">Closet</a></li>
+        <li><a href="./shows.html">Shows</a></li>
+        <li><a href="./characters.html">Friends</a></li>
+        <li><a href="./closet.html">Closet</a></li>
         
     </nav>
     <div class="btn">
