--- a/characters.html
+++ b/characters.html
@@ -31,17 +31,17 @@ rel="stylesheet"
 
             <div class="asset_cards">
                 <img src="./public/asset/ken.jpg">
-                <p>Raquelle — Competitive & fierce</p>
-            </div>
-
-            <div class="asset_cards">
-                <img src="./public/asset/ken.jpg">
                 <p>Skipper — Tech-savvy & creative</p>
             </div>
 
             <div class="asset_cards">
                 <img src="./public/asset/ken.jpg">
-                <p>Teresa — Loyal & imaginative</p>
+                <p>Stacie — Sporty & competitive</p>
+            </div>
+
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg">
+                <p>Chelsea — Imaginative & optimistic</p>
             </div>
 
         </div>
