--- a/index.html
+++ b/index.html
@@ -124,6 +124,6 @@ rel="stylesheet"
 <!-----------barbie (SPECIAL OFFER) END ----------------------------->
 
 
-    <script src="/WDProjLiJacobeReyes/js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>    
 </html>
