--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="navbar">
         <div class="logo">
-            <a href="#"><img src="/WDProjLiJacobeReyes/public/asset/barbielat.png" alt=""></a>
+            <a href="#"><img src="./public/asset/barbielat.png" alt=""></a>
         </div>
     <nav>
         <li><a href="#">Home</a></li>
