--- a/closet.html
+++ b/closet.html
@@ -40,6 +40,6 @@ rel="stylesheet"
 </section>
 
 
-    <script src="/WDProjLiJacobeReyes/js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>    
 </html>
