--- a/closet.html
+++ b/closet.html
@@ -18,7 +18,7 @@ rel="stylesheet"
         <h3 class="normal_heading-1">Barbie Closet</h3>
         <h2 class="main_heading">Iconic Outfits</h2>
 
-        <div class="movie_item_container">
+        <div class="closet_item_container">
 
             <div class="asset_cards">
                 <img src="./public/asset/raquelle.jpg" alt="">
