--- a/characters.html
+++ b/characters.html
@@ -44,6 +44,26 @@ rel="stylesheet"
                 <p>Chelsea — Imaginative & optimistic</p>
             </div>
 
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg">
+                <p>The Roberts — Supportive & dependable</p>
+            </div>
+
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg">
+                <p>Raquelle — Ambitious & trendy</p>
+            </div>
+
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg">
+                <p>Teresa — Clever & logical</p>
+            </div>
+
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg">
+                <p>Nikki — Creative & artsy</p>
+            </div>
+
         </div>
     </div>
 </section>
