--- a/movies.html
+++ b/movies.html
@@ -28,9 +28,10 @@ rel="stylesheet"
         <div class="movie_item_container">
 
     <div class="asset_cards">
-        <a href="https://www.imdb.com/title/tt5502946/" target="_blank"></a>
+        <a href="https://www.imdb.com/title/tt5502946/" target="_blank">
         <img src="./public/asset/raquelle.jpg" alt="">
         <p>Barbie: Star Light Adventure (2016)</p>
+        </a>
     </div>
 
     <div class="asset_cards">
