--- a/movies.html
+++ b/movies.html
@@ -29,8 +29,7 @@ rel="stylesheet"
 
     <div class="asset_cards">
         <img src="./public/asset/raquelle.jpg" alt="">
-        <p><a href="https://www.imdb.com/title/tt5502946/" target="_blank">Barbie: Star Light Adventure (2016)</p>
-        </a>
+        <p>Barbie: Star Light Adventure (2016)</p>
     </div>
 
     <div class="asset_cards">
