--- a/characters.html
+++ b/characters.html
@@ -64,6 +64,15 @@ rel="stylesheet"
                 <p>Nikki — Creative & artsy</p>
             </div>
 
+            <div class="asset_cards">
+                <img src="./public/asset/ken.jpg">
+                <p>Nikki — Creative & artsy</p>
+
+            </div><div class="asset_cards">
+                <img src="./public/asset/ken.jpg">
+                <p>Renee — Clumsy & funny</p>
+            </div>
+
         </div>
     </div>
 </section>
