--- a/characters.html
+++ b/characters.html
@@ -64,7 +64,7 @@ rel="stylesheet"
                 <p>Nikki — Creative & artsy</p>
             </div>
 
-            </div><div class="asset_cards">
+            <div class="asset_cards">
                 <img src="./public/asset/ken.jpg">
                 <p>Renee — Clumsy & funny</p>
             </div>
