--- a/characters.html
+++ b/characters.html
@@ -35,7 +35,7 @@ rel="stylesheet"
             </div>
 
             <div class="asset_cards">
-                <img src="./public/asset/ken.jpg">
+                <img src="./public/asset/stacie.jpg">
                 <p>Stacie — Sporty & competitive</p>
             </div>
 
