--- a/characters.html
+++ b/characters.html
@@ -20,7 +20,7 @@ rel="stylesheet"
         <div class="show_item_container">
 
             <div class="asset_cards">
-                <img src="./public/asset/barbeyy.jpg">
+                <img src="./public/asset/real.jpg">
                 <p>Barbie — Confident & iconic</p>
             </div>
 
