--- a/characters.html
+++ b/characters.html
@@ -30,7 +30,7 @@ rel="stylesheet"
             </div>
 
             <div class="asset_cards">
-                <img src="./public/asset/ken.jpg">
+                <img src="./public/asset/skip.jpg">
                 <p>Skipper — Tech-savvy & creative</p>
             </div>
 
