--- a/characters.html
+++ b/characters.html
@@ -40,7 +40,7 @@ rel="stylesheet"
             </div>
 
             <div class="asset_cards">
-                <img src="./public/asset/ken.jpg">
+                <img src="./public/asset/chels.jpg">
                 <p>Chelsea — Imaginative & optimistic</p>
             </div>
 
