--- a/characters.html
+++ b/characters.html
@@ -45,7 +45,7 @@ rel="stylesheet"
             </div>
 
             <div class="asset_cards">
-                <img src="./public/asset/reall.jpg">
+                <img src="./public/asset/realll.jpg">
                 <p>The Roberts — Supportive & dependable</p>
             </div>
 
